relative img links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	<section
 		class="top"
-		style="background-image:url('/css/img/theme-top.jpg')"
+		style="background-image:url('./css/img/theme-top.jpg')"
 
 	>
 
@@ -118,7 +118,7 @@
 
 	<section
 		class="results"
-		style="background-image:url('/css/img/theme-2015.jpg')"
+		style="background-image:url('./css/img/theme-2015.jpg')"
 
 	>
 
@@ -161,7 +161,7 @@
 
 	<section
 		class="results"
-		style="background-image:url('/css/img/theme-2014.jpg')"
+		style="background-image:url('./css/img/theme-2014.jpg')"
 
 	>
 		<div class="wrapper">
@@ -201,7 +201,7 @@
 
 	<section
 		class="results"
-		style="background-image:url('/css/img/theme-2013.jpg')"
+		style="background-image:url('./css/img/theme-2013.jpg')"
 
 	>
 		<div class="wrapper">
@@ -244,7 +244,7 @@
 
 	<section
 		class="results"
-		style="background-image:url('/css/img/theme-2012.jpg')"
+		style="background-image:url('./css/img/theme-2012.jpg')"
 
 	>
 		<div class="wrapper">
