--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title></title>
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Monda:400,700" />
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Monda:400,700" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<script src="js/libs/modernizr-2.6.2.min.js"></script>
 	<script src="js/libs/jquery-2.1.3.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/stellar.js/0.6.2/jquery.stellar.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/stellar.js/0.6.2/jquery.stellar.min.js"></script>
 	<script src="js/libs/snowstorm.js"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.29/skrollr.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.29/skrollr.min.js"></script>
 	<script type="text/javascript">
 		$(function () {
 
