--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		<menu>
 			<li><a href="#organizatori">Organizátori</a></li>
 			<li><a href="#pravidla">Pravidlá</a></li>
+			<li><a href="#r2016">2016</a></li>
 			<li><a href="#r2015">2015</a></li>
 			<li><a href="#r2014">2014</a></li>
 			<li><a href="#r2013">2013</a></li>
@@ -149,6 +150,47 @@
 					</a>
 					<strong>BRONZ</strong><br />
 					Katarína Kováčová<br>Martin Žák
+				</li>
+			</ul>
+			<p></p>
+		</div>
+	</section>
+
+	<a id="r2016" class="link"></a>
+
+	<section
+		class="results"
+		style="background-image:url('./css/img/theme-2016.jpg')"
+
+	>
+
+		<div class="wrapper">
+			<h1>2016 <small>(25.11-27.11.2016)</small></h1>
+			<p>
+				Liptovský Ján, 4. ročník<br />
+				Sponzor: Jozef Bilka
+			</p>
+			<ul>
+				<li>
+					<a class="fresco" data-fresco-group="y2016" href="images/2016-01.jpg">
+						<img src="images/2016-01.jpg" alt="" width="200" height="266" />
+					</a>
+					<strong>ZLATO</strong><br />
+					Tamara Húsová<br>Martin Žák
+				</li>
+				<li>
+					<a class="fresco" data-fresco-group="y2016" href="images/2016-02.jpg">
+						<img src="images/2016-02.jpg" alt="" width="200" height="266" />
+					</a>
+					<strong>STRIEBRO</strong><br />
+					Zuzana Tarabová<br>Zuzana Zemková
+				</li>
+				<li>
+					<a class="fresco" data-fresco-group="y2016" href="images/2015-03.jpg">
+						<img src="images/2015-03.jpg" alt="" width="200" height="266" />
+					</a>
+					<strong>BRONZ</strong><br />
+					Dalibor Lojko<br>Petra Karolusová
 				</li>
 			</ul>
 			<p></p>
